--- a/css/gradient.css
+++ b/css/gradient.css
@@ -144,7 +144,7 @@ body  {
   width: 960px;
 }
 .slider::before, .slider::after {
-  /* background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%); */
+  background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
   content: "";
   height: 100px;
   position: absolute;
