new gallery and text changes

--- a/css/style-light.css
+++ b/css/style-light.css
@@ -86,8 +86,8 @@ body {
 
 .mry-text {
 	width: 100%;
-	font-size: 16px;
-	line-height: 22px;
+	font-size: 20px;
+	line-height: 30px;
 	color: #424242;
 }
 
@@ -246,7 +246,7 @@ a, a:hover {
 	}
 	.mry-text {
 		font-size: 20px; 
-		line-height: 20px;
+		line-height: 30px;
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 	}
 	.mry-label, .mry-subtitle {
@@ -2925,7 +2925,7 @@ div.banner > h1 {
 	}
 	.menu{
 		display: flex !important;
-		margin-left: 40% !important;
+		margin-left: 25% !important;
 	}
 	.brand{
 		font-size: 3em !important;
@@ -3375,6 +3375,12 @@ main {
 	font-weight: bold;
 	color: #aaa;
 	cursor: pointer;
+  }
+  .brand-logo-image img{
+	border-radius: 14px;
+	height: 35px ;
+	width: 35px ;
+	margin-bottom:5px;
   }
   
 
