--- a/css/gradient.css
+++ b/css/gradient.css
@@ -8,7 +8,7 @@ body  {
   /* background: linear-gradient(54deg, #9164ff, #8bfff4); */
   color: #3c3f64;
   overflow-x: hidden;
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
 }
 .timeline ul li {
   list-style-type: none;
@@ -239,19 +239,19 @@ body  {
 	 z-index: -1;
 }
  .honeycomb-cell::before {
-	 background: #fff;
+	 background: #f2b12c;;
 	 transform: scale(1.055);
 }
  .honeycomb-cell::after {
-	 background: #3ea0eb;
+	 background: #000000;
 	 opacity: 0.5;
 	 transition: opacity 350ms;
 }
  .honeycomb-cell:hover .honeycomb-cell__title {
 	 opacity: 0;
 }
- .honeycomb-cell:hover::before {
-	 background: #72f88e;
+ .honeycomb-cell:hover::before ,.honeycomb-cell:focus, .honeycomb-cell:active {
+	 background: #15537a;
 }
  .honeycomb-cell:hover::after {
 	 opacity: 0;
