--- a/css/style-light.css
+++ b/css/style-light.css
@@ -3382,6 +3382,82 @@ main {
 	width: 35px ;
 	margin-bottom:5px;
   }
+
+
+  /* email-popup */
+  .popup {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .popup-content {
+	background-color: #17161642;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	border-radius:15px;
+  }
+  
+  .close-btn {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+  }
+  
+  .close-btn:hover,
+  .close-btn:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+  }
+  
+  form {
+	display: grid;
+	gap: 10px;
+	grid-template-columns: 1fr;
+  }
+  
+  label {
+	font-weight: bold;
+  }
+  
+  input,
+  textarea {
+	border: 1px solid #ccc;
+	padding: 5px;
+	font-size: 16px;
+  }
+  
+  button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin-top: 10px;
+	cursor: pointer;
+  }
+
+  .popup-text{
+	color: white !important;
+  }
+  .email-block{
+	display: block!important;
+  }
+
+  
   
 
 
