--- a/css/style-light.css
+++ b/css/style-light.css
@@ -1,61 +1,3 @@
-/*
-Template Name: Mireya
-Template URL: https://ultimatewebsolutions.net/mireya/intro/
-Author: Ultimate Websolutions
-Author URL: https://themeforest.net/user/ultimatewebsolutions/
-
-[Table of contents]
-
-1. Common
-      - Defaults
-      - Text
-      - Background Canvas
-      - Cursor and Trigers
-      - Buttons
-      - Space
-2. Frame
-      - App Markup
-      - Menu Button
-      - Menu
-      - Frame after 768px
-      - Frame after 550px
-4. Content
-      - Backgrounds
-      - Titles
-      - Slider Project
-      - Slider Project after 992px
-      - Slider Project after 768px
-      - Slider Navigation
-      - Slider Navigation  after 768px
-      - Slider Navigation  after 590px
-      - Scroll Hint
-      - Slider Arrows
-      - Video
-      - Team
-      - Testimonials
-      - Blog Pagination
-      - Contact
-      - Contact after 768px
-      - Quote
-      - Footer
-      - Footer after 768px
-4. Portfolio
-      - Filter
-      - Work item
-      - Sizes
-      - Grid
-      - Grid after 992px
-      - Grid after 768px
-5. Custom
-      - Swiper
-      - Mapbox
-      - Fancybox
-	  - Smooth Scrollbar
-
-6. Form Validation
-
-7. Success Submit
-      
 
 /* Common
 ==================================== */
@@ -255,6 +197,13 @@ a, a:hover {
 	.navbar-toggle{
 		display: block !important;
 	}
+	div.banner > h1 {
+		font-size: 2em !important;
+	}
+	.mry-arrows{
+		display: none !important;
+	}
+
 	
 }
 
@@ -495,7 +444,7 @@ a, a:hover {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 100px;
+	/* height: 100px; */
 	width: 100%;
 }
 
@@ -882,7 +831,7 @@ html.is-animating .transition-fade .mry-loading-curtain {
 	position: relative;
 	font-size: 11px;
 	text-transform: uppercase;
-	font-weight: 600;
+	/* font-weight: 600; */
 	color: #424242;
 	letter-spacing: 2px;
 	padding-left: 40px;
@@ -2117,6 +2066,9 @@ blockquote:after {
 		bottom: -10px;
 		top: auto;
 	}
+	.popup-content {
+		width: 80% !important;
+	}
 }
 
 /* Smooth Scrollbar */
@@ -2257,10 +2209,7 @@ blockquote:after {
 	-webkit-animation: checkmark-circle 0.6s ease-in-out backwards;
 	animation: checkmark-circle 0.6s ease-in-out backwards
 }
-.home-background{
-	/* background-color:#009CCC!important; */
-	/* background-image: linear-gradient(to right top, #337ab7, #9d74c5, #ed68a1, #ff7a5f, #ebad12);} */
-}
+
 
 
 
@@ -2291,7 +2240,7 @@ blockquote:after {
   
   .brand{
 	font-family:  -apple-system, BlinkMacSystemFont, sans-serif;
-	font-size: 4em;
+	font-size: 3em;
 	font-weight: 700;
 	line-height: 1;
 	color: #fff;
@@ -2741,12 +2690,12 @@ div.banner {
 div.banner > h1 {
 	background-color: #f2b12c;
 	/* background-image: url(https://img.freepik.com/free-vector/hand-drawn-flat-groovy-psychedelic-background_23-2149074391.jpg); */
-	font-size: 3em;
+	font-size: 2em;
 	font-weight: 800;
 	color: #fff;
 	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 	text-shadow: 2px 2px 30px rgba(0, 0, 0, 0.3);
-	-webkit-background-clip: text;
+	/* -webkit-background-clip: text; */
 	-webkit-text-fill-color: transparent;
 	-webkit-font-smoothing: antialiased;
 	text-transform: uppercase;
@@ -2925,7 +2874,7 @@ div.banner > h1 {
 	}
 	.menu{
 		display: flex !important;
-		margin-left: 25% !important;
+		/* margin-left: 25% !important; */
 	}
 	.brand{
 		font-size: 3em !important;
@@ -2987,6 +2936,9 @@ div.banner > h1 {
 		width: 300px !important;
 		margin-left:10%;
 	}
+	.footer-mobile-view{
+		display: none !important;
+	}
 
 
 	
@@ -2996,7 +2948,7 @@ div.banner > h1 {
 	margin-left:10%;
   }
   .footer-element{
-	background-color: #000;
+	background-color: rgb(241, 239, 239);
   }
 
   .works-view {
@@ -3051,7 +3003,7 @@ div.banner > h1 {
 	display: none;
   }
   .about-text{
-	font-size: 2em !important;
+	font-size: 1.5em !important;
     line-height: 2 !important;
 	width: 100%;
 }
@@ -3134,7 +3086,7 @@ html, body {
   height: 300px;
 }
 .floating-container:hover .floating-button {
-  box-shadow: 0 10px 25px rgba(44, 179, 240, 0.6);
+  /* box-shadow: 0 10px 25px rgba(44, 179, 240, 0.6); */
   -webkit-transform: translatey(5px);
           transform: translatey(5px);
   -webkit-transition: all 0.3s;
@@ -3154,20 +3106,20 @@ html, body {
 }
 .floating-container .floating-button {
   position: absolute;
-  width: 50px;
+  /* width: 50px;
   height: 50px;
-  background: #2cb3f0;
+  background: #2cb3f0; */
   bottom: 0;
   border-radius: 50%;
   left: 0;
   right: 0;
   margin: auto;
-  color: white;
+  /* color: white; */
   line-height: 65px;
   text-align: center;
   font-size: 23px;
   z-index: 100;
-  box-shadow: 0 10px 25px -5px rgba(44, 179, 240, 0.6);
+  /* box-shadow: 0 10px 25px -5px rgba(44, 179, 240, 0.6); */
   cursor: pointer;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -3206,6 +3158,9 @@ html, body {
 }
 
 /* image  card  design */
+.ceo-image{ 
+	border-radius: 10px;
+}
 main {
 	display: flex;
 	flex-direction: row;
@@ -3402,7 +3357,7 @@ main {
 	margin: 15% auto;
 	padding: 20px;
 	border: 1px solid #888;
-	width: 80%;
+	width: 30%;
 	border-radius:15px;
   }
   
@@ -3456,6 +3411,272 @@ main {
   .email-block{
 	display: block!important;
   }
+
+
+  .pg-footer {
+	font-family: 'Roboto', sans-serif;
+  }
+  
+  
+  .footer {
+	  background-color: #004658;
+	  color: #fff;
+  }
+  .footer-wave-svg {
+	  background-color: transparent;
+	  display: block;
+	  height: 30px;
+	  position: relative;
+	  top: -1px;
+	  width: 100%;
+  }
+  .footer-wave-path {
+	  fill: #e9edf3;
+  }
+  
+  .footer-content {
+	  margin-left: auto;
+	  margin-right: auto;
+	  max-width: 1230px;
+	  padding: 40px 15px 450px;
+	  position: relative;
+  }
+  
+  .footer-content-column {
+	  box-sizing: border-box;
+	  float: left;
+	  padding-left: 15px;
+	  padding-right: 15px;
+	  width: 100%;
+	  color: #fff;
+  }
+  
+  .footer-content-column ul li a {
+	color: #fff;
+	text-decoration: none;
+  }
+  
+  .footer-logo-link {
+	  display: inline-block;
+  }
+  .footer-menu {
+	  margin-top: 30px;
+  }
+  
+  .footer-menu-name {
+	  color: #fffff2;
+	  font-size: 15px;
+	  font-weight: 900;
+	  letter-spacing: .1em;
+	  line-height: 18px;
+	  margin-bottom: 0;
+	  margin-top: 0;
+	  text-transform: uppercase;
+  }
+  .footer-menu-list {
+	  list-style: none;
+	  margin-bottom: 0;
+	  margin-top: 10px;
+	  padding-left: 0;
+  }
+  .footer-menu-list li {
+	  margin-top: 5px;
+  }
+  
+  .footer-call-to-action-description {
+	  color: #fffff2;
+	  margin-top: 10px;
+	  margin-bottom: 20px;
+  }
+  .footer-call-to-action-button:hover {
+	  background-color: #fffff2;
+	  color: #00bef0;
+  }
+  .button:last-of-type {
+	  margin-right: 0;
+  }
+  .footer-call-to-action-button {
+	  background-color: #027b9a;
+	  border-radius: 21px;
+	  color: #fffff2;
+	  display: inline-block;
+	  font-size: 11px;
+	  font-weight: 900;
+	  letter-spacing: .1em;
+	  line-height: 18px;
+	  padding: 12px 30px;
+	  margin: 0 10px 10px 0;
+	  text-decoration: none;
+	  text-transform: uppercase;
+	  transition: background-color .2s;
+	  cursor: pointer;
+	  position: relative;
+  }
+  .footer-call-to-action {
+	  margin-top: 30px;
+  }
+  .footer-call-to-action-title {
+	  color: #fffff2;
+	  font-size: 14px;
+	  font-weight: 900;
+	  letter-spacing: .1em;
+	  line-height: 18px;
+	  margin-bottom: 0;
+	  margin-top: 0;
+	  text-transform: uppercase;
+  }
+  .footer-call-to-action-link-wrapper {
+	  margin-bottom: 0;
+	  margin-top: 10px;
+	  color: #fff;
+	  text-decoration: none;
+  }
+  .footer-call-to-action-link-wrapper a {
+	  color: #fff;
+	  text-decoration: none;
+  }
+  
+  
+  
+  
+  
+  /*==================== 
+  Footer 
+====================== */
+
+/* Main Footer */
+footer .main-footer{  padding: 20px 0;  background: #252525;}
+footer ul{  padding-left: 0;  list-style: none;}
+
+/* Copy Right Footer */
+.footer-copyright { background: #222; padding: 5px 0;}
+.footer-copyright .logo {    display: inherit;}
+.footer-copyright nav {    float: right;    margin-top: 5px;}
+.footer-copyright nav ul {  list-style: none; margin: 0;  padding: 0;}
+.footer-copyright nav ul li { border-left: 1px solid #505050; display: inline-block;  line-height: 12px;  margin: 0;  padding: 0 8px;}
+.footer-copyright nav ul li a{  color: #969696;}
+.footer-copyright nav ul li:first-child { border: medium none;  padding-left: 0;}
+.footer-copyright p { color: #969696; margin: 2px 0 0;}
+
+/* Footer Top */
+.footer-top{  background: #252525;  padding-bottom: 30px; margin-bottom: 30px;  border-bottom: 3px solid #222;}
+
+/* Footer transparent */
+footer.transparent .footer-top, footer.transparent .main-footer{  background: transparent;}
+footer.transparent .footer-copyright{ background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3) ;}
+
+/* Footer light */
+footer.light .footer-top{ background: #f9f9f9;}
+footer.light .main-footer{  background: #f9f9f9;}
+footer.light .footer-copyright{ background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}
+
+/* Footer 4 */
+.footer- .logo {    display: inline-block;}
+
+/*==================== 
+  Widgets 
+====================== */
+.widget{  padding: 20px;  margin-bottom: 40px;}
+.widget.widget-last{  margin-bottom: 0px;}
+.widget.no-box{ padding: 0; background-color: transparent;  margin-bottom: 40px;
+  box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; -o-box-shadow: none;}
+.widget.subscribe p{  margin-bottom: 18px;}
+.widget li a{ color: #fff;}
+.widget li a:hover{ color: #aaa;text-decoration: none;}
+.widget-title {margin-bottom: 20px;}
+.widget-title span {background: #839FAD none repeat scroll 0 0;display: block; height: 1px;margin-top: 25px;position: relative;width: 20%;}
+.widget-title span::after {background: inherit;content: "";height: inherit;    position: absolute;top: -4px;width: 50%;}
+.widget-title.text-center span,.widget-title.text-center span::after {margin-left: auto;margin-right:auto;left: 0;right: 0;}
+.widget .badge{ float: right; background: #7f7f7f;}
+
+.typo-light h1, 
+.typo-light h2, 
+.typo-light h3, 
+.typo-light h4, 
+.typo-light h5, 
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small{  color: #fff;}
+
+ul.social-footer2 { margin: 0;padding: 0; width: auto;}
+ul.social-footer2 li {display: inline-block;padding: 0;}
+ul.social-footer2 li a:hover {background-color:#ff8d1e;}
+ul.social-footer2 li a {display: block; height:30px;width: 30px;text-align: center;}
+.btn{background-color: #ff8d1e; color:#fff;}
+.btn:hover, .btn:focus, .btn.active {background: #4b92dc;color: #fff;
+-webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+-moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+-ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+-o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+-webkit-transition: all 250ms ease-in-out 0s;
+-moz-transition: all 250ms ease-in-out 0s;
+-ms-transition: all 250ms ease-in-out 0s;
+-o-transition: all 250ms ease-in-out 0s;
+transition: all 250ms ease-in-out 0s;
+
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    background-color: #3e3e3e;
+    color: #fff;
+    padding: 9px;
+    border-radius: 5px;
+}
+
+#subscribe-box .emailfield {
+    margin: auto;
+}
+
+input[type="text"] {
+    background: rgba(255,255,255,0.075);
+    padding: 10px 15px;
+    color: #aaa;
+    border: 3px solid rgba(0,0,0,0.1);
+    font-size: 14px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+    transition: all 0.2s cubic-bezier(0.4,0,0.2,1);
+    transition-delay: 0.2s;
+    text-align: center;
+    width: 100%;
+}
+
+input.submitbutton.ripplelink {
+    background: #e67e22;
+    border: 3px solid rgba(0,0,0,0.1);
+    color: #fff;
+    border-color: #e67e22;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2);
+    transition-delay: 0s;
+    width: 100%;
+    font-size: 14px;
+    /* font-weight: 700; */
+    border: 0px solid;
+    transition: all 0.2s cubic-bezier(0.4,0,0.2,1);
+    padding: 10px 15px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+}
+
+.thumb-content ::before {
+    content: "\f190";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    margin-left: 5px;
+    color: #ffffff;
+}
+
+.contact-icon{
+	height:30px;
+}
+
 
   
   
